--- a/views/category/getAllCategory.ejs
+++ b/views/category/getAllCategory.ejs
@@ -88,11 +88,11 @@
         <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
         <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz </a>
         <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
+        <a href="http://localhost:6002/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
+        <a href="http://localhost:6002/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
 
     </div>
-    <h1 class="text-center mt-5">All Categories</h1>
+    <h1 class="text-center mt-5">Danh sách thể loại</h1>
 
     <div class="container mt-5">
 
