--- a/views/category/updateCategory.ejs
+++ b/views/category/updateCategory.ejs
@@ -60,8 +60,8 @@
         <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
         <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz </a>
         <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
+        <a href="http://localhost:6002/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
+        <a href="http://localhost:6002/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
     </div>
     <div class="container mt-5">
         <h1 style="margin-left: 550px; margin-top: 20px;">Update Category</h1>
