--- a/views/test/getAllTests.ejs
+++ b/views/test/getAllTests.ejs
@@ -9,7 +9,7 @@
     <style>
         body {
             margin: 0;
-            font-family: 'Arial';
+            /* font-family: 'Arial'; */
             display: flex;
         }
 
@@ -89,16 +89,16 @@
             </p>
         </div>
 
-        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Manage Questions</a>
-        <a href="http://localhost:6002/category" class="sidebar-nav-link">Category List</a>
-        <a href="http://localhost:6002/test" class="sidebar-nav-link">Manage Quizzes</a>
+        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
+        <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại</a>
+        <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz</a>
         <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
-        <a href="#" class="sidebar-nav-link">Quản lý</a>
+        <a href="http://localhost:6002/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
+        <a href="http://localhost:6002/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
     </div>
 
     <main>
-        <h1 style="align-items: center; justify-content: center; margin-left: 450px; padding: 15px;">List of Tests</h1>
+        <h1 style="align-items: center; justify-content: center; margin-left: 450px; padding: 15px;">Danh sách Quizz</h1>
         <% if (typeof totalTests !== 'undefined') { %>
         <p id="totalTests">Total Tests: <%= totalTests %></p>
         <% } %>
