--- a/views/c&n/confirmH.ejs
+++ b/views/c&n/confirmH.ejs
@@ -53,7 +53,7 @@
 
         /* Style for table */
         table {
-            width: calc(100% - 250px); /* Subtracting sidebar width from 100% */
+            width: calc(100% - 250px); 
             border-collapse: collapse;
             margin-top: 20px;
         }
@@ -68,6 +68,12 @@
         th {
             background-color: #f2f2f2;
         }
+
+        
+
+        /* .transaction-link:hover {
+            background-color: #ccc;
+        } */
     </style>
 </head>
 
@@ -96,6 +102,7 @@
             <thead>
                 <tr>
                     <th>STT</th>
+                    <th>Name </th>
                     <th>WalletId</th>
                     <th>Token Address</th>
                     <th>Request Time</th>
@@ -105,6 +112,7 @@
                 <% confirmedRequests.forEach((request, index) => { %>
                     <tr>
                         <td><%= index + 1 %></td>
+                        <td><%= request.username %></td>
                         <td><%= request.userId %></td>
                         <td><%= request.nftId %></td>
                         <td><%= request.requestTime %></td>
