--- a/views/category/getAllCategory.ejs
+++ b/views/category/getAllCategory.ejs
@@ -84,12 +84,12 @@
             </p>
         </div>
 
-        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
-        <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại </a>
-        <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz </a>
-        <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
-        <a href="http://localhost:6002/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
-        <a href="http://localhost:6002/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
+        <a href="https://tt-sp24.onrender.com/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
+        <a href="https://tt-sp24.onrender.com/category" class="sidebar-nav-link">Danh sách thể loại </a>
+        <a href="https://tt-sp24.onrender.com/test" class="sidebar-nav-link">Quản lý quizz </a>
+        <a href="https://tt-sp24.onrender.com/nft" class="sidebar-nav-link">NFTs</a>
+        <a href="https://tt-sp24.onrender.com/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
+        <a href="https://tt-sp24.onrender.com/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
 
     </div>
     <h1 class="text-center mt-5">Danh sách thể loại</h1>
