--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -59,21 +59,23 @@
             <p style="margin-bottom: 1em;"><%= user.email %></p>
         </div>
 
-        <a href="http://localhost:6002/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
-        <a href="http://localhost:6002/category" class="sidebar-nav-link">Danh sách thể loại</a>
-        <a href="http://localhost:6002/test" class="sidebar-nav-link">Quản lý quizz </a>
-        <a href="http://localhost:6002/nft" class="sidebar-nav-link">NFTs</a>
-        <a href="http://localhost:6002/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
-        <a href="http://localhost:6002/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
+        <a href="https://tt-sp24.onrender.com/question" class="sidebar-nav-link active">Quản lý câu hỏi</a>
+        <a href="https://tt-sp24.onrender.com/category" class="sidebar-nav-link">Danh sách thể loại </a>
+        <a href="https://tt-sp24.onrender.com/test" class="sidebar-nav-link">Quản lý quizz </a>
+        <a href="https://tt-sp24.onrender.com/nft" class="sidebar-nav-link">NFTs</a>
+        <a href="https://tt-sp24.onrender.com/api/notf/confirm" class="sidebar-nav-link">Quản lý đổi thưởng</a>
+        <a href="https://tt-sp24.onrender.com/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
     </div>
     <div>
         <p style="margin-left: 800px; margin-top: 50px;">Welcome to ...</p>
     </div>
 
-    <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
+    <!-- <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
         <source src="/mp4-server.mp4" type="video/mp4">
         Your browser does not support the video tag.
-    </video>
+    </video> -->
+
+    <img src="https://t3.ftcdn.net/jpg/04/22/15/54/360_F_422155424_TTgMW6tuAcoKtpoZdaSv5J6sfdtybCPu.jpg" alt="" style="display: flex; align-items: center; justify-content: center; margin-right: 35px;">a
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
