--- a/views/blockchain/getAllnfts.ejs
+++ b/views/blockchain/getAllnfts.ejs
@@ -78,7 +78,7 @@
 
     <h1 class="mt-5 mb-4 centered">Danh sách nfts</h1>
 
-    <a href="http://localhost:6002/nft/mintNfts" >mintNfts</a>
+    <a href="https://tt-sp24.onrender.com/nft/mintNfts" >mintNfts</a>
 
     <div id="nftList" class="mb-5"></div>
 
