--- a/views/question/getAllQuestions.ejs
+++ b/views/question/getAllQuestions.ejs
@@ -116,7 +116,7 @@
                             <% }); %>
                     </select>
                     <button type="submit">Lọc</button>
-                    <a style="display: flex;" href="http://localhost:6002/question/create">Thêm câu hỏi</a>
+                    <a style="display: flex;" href="https://tt-sp24.onrender.com/question/create">Thêm câu hỏi</a>
 
                 </form>
 
