--- a/views/test/createTest.ejs
+++ b/views/test/createTest.ejs
@@ -83,7 +83,7 @@
                 .then(response => response.json())
                 .then(data => {
                     console.log(data);
-                    // window.location.href = '/test';
+                    window.location.href = '/test';
                 })
                 .catch(error => {
                     console.error('Error creating test:', error);
