--- a/views/test/getAllTests.ejs
+++ b/views/test/getAllTests.ejs
@@ -103,7 +103,7 @@
         <p id="totalTests">Total Tests: <%= totalTests %></p>
         <% } %>
 
-        <a href="http://localhost:6002/test/create">Add New Test</a>
+        <a href="https://tt-sp24.onrender.com/test/create">Add New Test</a>
 
         <% tests.forEach(test => { %>
             <div>
@@ -131,7 +131,7 @@
                 <% } else { %>
                     <p>No questions found for this test</p>
                 <% } %>
-                <a href="http://localhost:6002/test/update/<%= test._id %>">Update</a>
+                <a href="https://tt-sp24.onrender.com/test/update/<%= test._id %>">Update</a>
             </div>
         <% }); %>
         
