--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -67,7 +67,7 @@
         <a href="https://tt-sp24.onrender.com/api/notf/confirmH" class="sidebar-nav-link">Lịch sử xác nhận</a>
     </div>
     <div>
-        <p style="margin-left: 800px; margin-top: 50px;">Welcome to ...</p>
+        <h3 style="margin-left: 800px; margin-top: 50px;">Welcome to...</h3>
     </div>
 
     <!-- <video controls width="640" height="360" style="margin-left: 500px; margin-top: 50px;">
@@ -75,9 +75,9 @@
         Your browser does not support the video tag.
     </video> -->
 
-    <img src="https://t3.ftcdn.net/jpg/04/22/15/54/360_F_422155424_TTgMW6tuAcoKtpoZdaSv5J6sfdtybCPu.jpg" alt="" style="display: flex; align-items: center; justify-content: center; margin-right: 35px;">a
+    <!-- <img src="https://t3.ftcdn.net/jpg/04/22/15/54/360_F_422155424_TTgMW6tuAcoKtpoZdaSv5J6sfdtybCPu.jpg" alt="" style="display: flex; align-items: center; justify-content: center; margin-right: 35px;">a -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
+ 
 </html>
