--- a/views/c&n/exchangeRequests.ejs
+++ b/views/c&n/exchangeRequests.ejs
@@ -143,20 +143,20 @@
     </div>
 
     <script>
-        const private_k = "3L38PQm9yYAKHkUfGYmuQpmhXaubu7jdfSbykKLvQWbZgJX862WFVs8mRoChb4EWbXdtqotwtpZ9Hw1Xh9RmfK1t";
+        const private_k = "LZ91L7MUzNhKsrwnLucoAQC1U4ZLnGrw5qNWQQmg7LzQcHX6XBAuwnxw4b4L61YiBSkGm7UWvEQt2rLNJRTc2vA";
         console.log(private_k)
         function confirmExchange(requestId, nftId, userId) {
             var myHeaders = new Headers();
-            myHeaders.append("x-api-key", "O37RXk2u7RIYdj5E");
+            myHeaders.append("x-api-key", "Z0s1HomCTG-Ppn--");
             myHeaders.append("Content-Type", "application/json");
 
             var raw = JSON.stringify({
                 "network": "devnet",
                 "token_address": nftId,
-                "from_address": "DZkW5YeDqC1xCeYrHqTa7a34wVsntPqkXtNj9R14Jnre",
+                "from_address": "9FWUokoE27tEtaxCvcUwQwQdtY5bbzcgqX7miKct1geS",
                 "to_address": userId,
                 "amount": 1,
-                "fee_payer": "DZkW5YeDqC1xCeYrHqTa7a34wVsntPqkXtNj9R14Jnre",
+                "fee_payer": "9FWUokoE27tEtaxCvcUwQwQdtY5bbzcgqX7miKct1geS",
                 "priority_fee": 100
             });
 
