--- a/views/c&n/exchangeRequests.ejs
+++ b/views/c&n/exchangeRequests.ejs
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exchange Requests</title>
+    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
     <style>
         body {
             margin: 0;
             font-family: 'Arial';
         }
+
         /* Sidebar styles */
         .sidebar {
             height: 100%;
@@ -82,12 +84,6 @@
             text-align: center;
             border-radius: 5px;
         }
-
-        #resultDiv {
-            margin-top: 20px;
-            border: 1px solid #ccc;
-            padding: 10px;
-        }
     </style>
 </head>
 
@@ -113,7 +109,6 @@
     <div class="content">
         <h1 style="display: flex; justify-content: center; align-items: center; margin-right: 122px;">Xác nhận yêu cầu đổi nfts</h1>
         <a href="https://shyft-insider.vercel.app/" target="_blank" class="transaction-link">Chi tiết giao dịch</a>
-        <div id="resultDiv"></div>
         <table>
             <thead>
                 <tr>
@@ -126,22 +121,22 @@
             </thead>
             <tbody>
                 <% exchangeRequests.forEach((request, index) => { %>
-                <tr>
-                    <td><%= index + 1 %></td>
-                    <td><%= request.userId %></td>
-                    <td><%= request.nftId %></td>
-                    <td><%= request.requestTime %></td>
-                    <td>
-                        <form id="confirmForm_<%= request._id %>" action="/confirmExchange" method="post">
-                            <input type="hidden" name="requestId" value="<%= request._id %>">
-                            <% if (request.confirmed) { %>
-                            <span>Đã xác nhận</span>
-                            <% } else { %>
-                            <button type="button" onclick="confirmExchange('<%= request._id %>', '<%= request.nftId %>', '<%= request.userId %>')">Confirm Exchange</button>
-                            <% } %>
-                        </form>
-                    </td>
-                </tr>
+                    <tr>
+                        <td><%= index + 1 %></td>
+                        <td><%= request.userId %></td>
+                        <td><%= request.nftId %></td>
+                        <td><%= request.requestTime %></td>
+                        <td>
+                            <form id="confirmForm_<%= request._id %>" action="/confirmExchange" method="post">
+                                <input type="hidden" name="requestId" value="<%= request._id %>">
+                                <% if (request.confirmed) { %>
+                                    <span>Đã xác nhận</span>
+                                <% } else { %>
+                                    <button type="button" onclick="confirmExchange('<%= request._id %>', '<%= request.nftId %>', '<%= request.userId %>')">Confirm Exchange</button>
+                                <% } %>
+                            </form>
+                        </td>
+                    </tr>
                 <% }); %>
             </tbody>
         </table>
@@ -149,8 +144,8 @@
 
     <script>
         const private_k = "LZ91L7MUzNhKsrwnLucoAQC1U4ZLnGrw5qNWQQmg7LzQcHX6XBAuwnxw4b4L61YiBSkGm7UWvEQt2rLNJRTc2vA";
-        console.log(private_k)
-        function confirmExchange(requestId, nftId, userId) {
+
+        async function confirmExchange(requestId, nftId, userId) {
             var myHeaders = new Headers();
             myHeaders.append("x-api-key", "Z0s1HomCTG-Ppn--");
             myHeaders.append("Content-Type", "application/json");
@@ -172,41 +167,69 @@
                 redirect: 'follow'
             };
 
-            fetch("https://api.shyft.to/sol/v1/nft/transfer_detach", requestOptions)
-                .then(response => response.text())
-                .then(result => {
-                    console.log(result);
-                    alert('NFTs transferred successfully');
+            try {
+                const response = await fetch("https://api.shyft.to/sol/v1/nft/transfer_detach", requestOptions);
+                const result = await response.text();
+                console.log(result);
+                alert('NFTs transferred successfully');
 
-                    document.getElementById('resultDiv').innerHTML = `<p>Private Key: ${private_k}</p><p>Result: ${result}</p>`;
+                signTransaction(result.result.encoded_transaction, private_k);
 
-                    fetch("/api/notf/confirmExchange", {
-                            method: "POST",
-                            headers: {
-                                "Content-Type": "application/json"
-                            },
-                            body: JSON.stringify({
-                                requestId: requestId
-                            })
-                        })
-                        .then(response => response.json())
-                        .then(data => {
-                            if (data.success) {
-                                var form = document.getElementById("confirmForm_" + requestId);
-                                form.innerHTML = "<span>Đã xác nhận</span>";
-                            } else {
-                                alert(data.message);
-                            }
-                        })
-                        .catch(error => {
-                            console.error("Error confirming exchange:", error);
-                            alert("Error confirming exchange");
-                        });
-                })
-                .catch(error => {
-                    console.error('error', error);
-                    alert('Error transferring NFTs');
+                const confirmResponse = await fetch("/api/notf/confirmExchange", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({
+                        requestId: requestId
+                    })
                 });
+
+                const data = await confirmResponse.json();
+                if (data.success) {
+                    var form = document.getElementById("confirmForm_" + requestId);
+                    form.innerHTML = "<span>Đã xác nhận</span>";
+                } else {
+                    alert(data.message);
+                }
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Error during exchange confirmation");
+            }
+        }
+
+        async function signTransaction(encodedTransaction, fromPrivateKey) {
+            try {
+                const connection = new solanaWeb3.Connection(solanaWeb3.clusterApiUrl("devnet"), 'confirmed');
+                const feePayer = solanaWeb3.Keypair.fromSecretKey(private_k);
+                const recoveredTransaction = getRawTransaction(encodedTransaction);
+                if (recoveredTransaction instanceof solanaWeb3.VersionedTransaction) {
+                    recoveredTransaction.sign([feePayer]);
+                } else {
+                    recoveredTransaction.partialSign(feePayer);
+                }
+                const txnSignature = await connection.sendRawTransaction(
+                    recoveredTransaction.serialize(),
+                );
+                return txnSignature;
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Error signing transaction");
+            }
+        }
+
+        function getRawTransaction(encodedTransaction) {
+            let recoveredTransaction;
+            try {
+                recoveredTransaction = solanaWeb3.Transaction.from(
+                    Buffer.from(encodedTransaction, 'base64')
+                );
+            } catch (error) {
+                recoveredTransaction = solanaWeb3.VersionedTransaction.deserialize(
+                    Buffer.from(encodedTransaction, 'base64')
+                );
+            }
+            return recoveredTransaction;
         }
     </script>
 </body>
